language/move-lang/tests/move_check/typing/module_call_wrong_arity.exp
error: 

    ┌── tests/move_check/typing/module_call_wrong_arity.move:27:9 ───
    │
 27 │         X::foo(1);
    │         ^^^^^^^^^ Invalid call of '0x1::X::foo'. The call of '0x1::X::foo' expected 0 argument(s) but got 1
    ·
 27 │         X::foo(1);
    │                - Found 1 arguments here
    │

error: 

    ┌── tests/move_check/typing/module_call_wrong_arity.move:28:9 ───
    │
 28 │         X::foo(1, 2);
    │         ^^^^^^^^^^^^ Invalid call of '0x1::X::foo'. The call of '0x1::X::foo' expected 0 argument(s) but got 2
    ·
 28 │         X::foo(1, 2);
    │               ------ Found 2 arguments here
    │

error: 

    ┌── tests/move_check/typing/module_call_wrong_arity.move:29:9 ───
    │
 29 │         X::bar();
    │         ^^^^^^^^ Invalid call of '0x1::X::bar'. The call of '0x1::X::bar' expected 1 argument(s) but got 0
    ·
 29 │         X::bar();
    │               -- Found 0 arguments here
    │

error: 

    ┌── tests/move_check/typing/module_call_wrong_arity.move:30:9 ───
    │
 30 │         X::bar(1, 2);
    │         ^^^^^^^^^^^^ Invalid call of '0x1::X::bar'. The call of '0x1::X::bar' expected 1 argument(s) but got 2
    ·
 30 │         X::bar(1, 2);
    │               ------ Found 2 arguments here
    │

error: 

    ┌── tests/move_check/typing/module_call_wrong_arity.move:31:9 ───
    │
 31 │         X::baz<u64, u64>();
    │         ^^^^^^^^^^^^^^^^^^ Invalid call of '0x1::X::baz'. The call of '0x1::X::baz' expected 2 argument(s) but got 0
    ·
 31 │         X::baz<u64, u64>();
    │                         -- Found 0 arguments here
    │

error: 

    ┌── tests/move_check/typing/module_call_wrong_arity.move:32:9 ───
    │
 32 │         X::baz<u64, u64>(1);
    │         ^^^^^^^^^^^^^^^^^^^ Invalid call of '0x1::X::baz'. The call of '0x1::X::baz' expected 2 argument(s) but got 1
    ·
 32 │         X::baz<u64, u64>(1);
    │                          - Found 1 arguments here
    │

error: 

    ┌── tests/move_check/typing/module_call_wrong_arity.move:33:9 ───
    │
 33 │         X::baz(1, 2, 3);
    │         ^^^^^^^^^^^^^^^ Invalid call of '0x1::X::baz'. The call of '0x1::X::baz' expected 2 argument(s) but got 3
    ·
 33 │         X::baz(1, 2, 3);
    │               --------- Found 3 arguments here
    │

error: 

    ┌── tests/move_check/typing/module_call_wrong_arity.move:37:9 ───
    │
 37 │         foo(1);
    │         ^^^^^^ Invalid call of '0x1::M::foo'. The call of '0x1::M::foo' expected 0 argument(s) but got 1
    ·
 37 │         foo(1);
    │             - Found 1 arguments here
    │

error: 

    ┌── tests/move_check/typing/module_call_wrong_arity.move:38:9 ───
    │
 38 │         foo(1, 2);
    │         ^^^^^^^^^ Invalid call of '0x1::M::foo'. The call of '0x1::M::foo' expected 0 argument(s) but got 2
    ·
 38 │         foo(1, 2);
    │            ------ Found 2 arguments here
    │

error: 

    ┌── tests/move_check/typing/module_call_wrong_arity.move:39:9 ───
    │
 39 │         bar();
    │         ^^^^^ Invalid call of '0x1::M::bar'. The call of '0x1::M::bar' expected 1 argument(s) but got 0
    ·
 39 │         bar();
    │            -- Found 0 arguments here
    │

error: 

    ┌── tests/move_check/typing/module_call_wrong_arity.move:40:9 ───
    │
 40 │         bar(1, 2);
    │         ^^^^^^^^^ Invalid call of '0x1::M::bar'. The call of '0x1::M::bar' expected 1 argument(s) but got 2
    ·
 40 │         bar(1, 2);
    │            ------ Found 2 arguments here
    │

error: 

    ┌── tests/move_check/typing/module_call_wrong_arity.move:41:9 ───
    │
 41 │         baz<u64, u64>();
    │         ^^^^^^^^^^^^^^^ Invalid call of '0x1::M::baz'. The call of '0x1::M::baz' expected 2 argument(s) but got 0
    ·
 41 │         baz<u64, u64>();
    │                      -- Found 0 arguments here
    │

error: 

    ┌── tests/move_check/typing/module_call_wrong_arity.move:42:9 ───
    │
 42 │         baz<u64, u64>(1);
    │         ^^^^^^^^^^^^^^^^ Invalid call of '0x1::M::baz'. The call of '0x1::M::baz' expected 2 argument(s) but got 1
    ·
 42 │         baz<u64, u64>(1);
    │                       - Found 1 arguments here
    │

error: 

    ┌── tests/move_check/typing/module_call_wrong_arity.move:43:9 ───
    │
 43 │         baz(1, 2, 3);
    │         ^^^^^^^^^^^^ Invalid call of '0x1::M::baz'. The call of '0x1::M::baz' expected 2 argument(s) but got 3
    ·
 43 │         baz(1, 2, 3);
    │            --------- Found 3 arguments here
    │

